# pit38-crypto

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  nbp_currency_to_csv.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: enforce-venv.py  format-after-edit.sh
.claude/skills/release-check/: SKILL.md
data/currency/: eurpln-2025.sample.csv  eurpln_2025.sample.csv
data/statement/: statement-2025.sample.csv
src/pit38_crypto/: __init__.py  cli.py  currency.py  filter.py  pipeline.py  reader.py  transform.py
tests/: conftest.py  test_currency.py  test_filter.py  test_pipeline.py  test_reader.py  test_transform.py
